<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sleeping_layout" >

    <com.tuyou.tsd.launcher.widget.SleepingView
        android:id="@+id/sleeping_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

	<TextView 
        android:id="@+id/sleeping_time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/time_default"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_40" />

    <TextView
        android:id="@+id/sleeping_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sleeping_time_view"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/date_default"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@+id/sleeping_date_text"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp" >

<!-- 	    <ImageView
	        android:id="@+id/sleeping_weather_img"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/weather_37" />
 -->

		<TextView
		    android:id="@+id/sleeping_weather_text"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
		    android:text="@string/temperature_default"
		    android:textColor="@color/white"
		    android:textSize="@dimen/text_size_20" />

	    <TextView
            android:id="@+id/sleeping_low_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_default"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
		    android:layout_marginRight="10dp"
            android:text="@string/temperature_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />

	    <TextView
            android:id="@+id/sleeping_high_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_default"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature_unit"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

</RelativeLayout>
